syntax = "proto3";
package Services;

import "google/protobuf/empty.proto";
import "Protos/LobbyService.proto";

option csharp_namespace = "Connections.Services";
//придумать как отослать стрим состояния игры (видимо надо сделать в лобби сервис (prepareToGame))

service GameService{
    rpc StartGame(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc EndTurn(ActionRequest) returns (google.protobuf.Empty);
    rpc GiveUp(ActionRequest) returns (google.protobuf.Empty);
    rpc ThrowDeffenceCard(ThrowCardRequest) returns (google.protobuf.Empty);
    rpc ThrowAttackCard(ThrowCardRequest) returns (google.protobuf.Empty);
}
      
message ThrowCardRequest{
    ActionRequest ActionRequest = 1;
    Card card = 2;
}

message Card{
    Rank rank = 1;
    Suit suit = 2;
}

enum Rank{
    Two = 0;
    Three = 1;
    Four = 2; 
    Five = 3;
    Six = 4;
    Seven = 5; 
    Eight = 6; 
    Nine = 7;
    Ten = 8; 
    Jack = 9; 
    Queen = 10;
    King = 11;
    Ace = 12;
}

enum Suit{
    Diamonds = 0;
    Hearts = 1;
    Clubs = 2;
    Spades = 3;
}